--- a/Frontend/frontend/public/index.html
+++ b/Frontend/frontend/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/laufen.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="csrf_token" content="{{ csrf_token }}"> <!-- required for CSRF-security -->
     <meta
       name="description"
       content="Web site created using create-react-app"
